--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -88,6 +88,7 @@
                                     <i class="el-icon-aim"></i>
                                     <span slot="title">权限管理</span>
                                 </template>
+                                <el-menu-item index="/admin/user/list">用户列表</el-menu-item>
                                 <el-menu-item index="/admin/role/list">角色列表</el-menu-item>
                                 <el-menu-item index="/admin/res/list">资源列表</el-menu-item>
 
