--- a/src/main/resources/templates/res/list.html
+++ b/src/main/resources/templates/res/list.html
@@ -10,7 +10,7 @@
           <span class="layui-breadcrumb">
             <a href="">资源管理</a>
             <a>
-              <cite>资源表示</cite></a>
+              <cite>资源列表</cite></a>
           </span>
 </div>
 <div class="layui-fluid">
