--- a/src/main/resources/templates/role/list.html
+++ b/src/main/resources/templates/role/list.html
@@ -56,7 +56,7 @@
             <a href="">角色管理</a>
             <!--<a href="">XX</a>-->
             <a>
-              <cite>角色表示</cite></a>
+              <cite>角色列表</cite></a>
           </span>
 </div>
 <div th:include="role/inc :: head"></div>
