--- a/src/main/resources/templates/role/res.html
+++ b/src/main/resources/templates/role/res.html
@@ -3,6 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
+    <link rel="stylesheet" href="../../static/css/layui.css">
+    <script src="../../static/js/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
+    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css">
     <script type="text/javascript" th:src="@{/js/jquery-2.1.1.min.js}"></script>
     <script type="text/javascript">
         $(function () {
@@ -30,34 +36,83 @@
     </script>
 </head>
 <body>
-<div id="content">
-    <div th:include="role/inc :: head"></div>
-    <h4 th:text=" ${role.name }+'----'+${role.sn}"></h4>
-    <input type="hidden" id="roleId" th:value="${role.id }"/>
-    <table width="800" cellspacing="0" cellPadding="0" id="listTable" border="1">
-        <thead>
-        <tr>
-            <td>资源名称</td>
-            <td>资源url</td>
-            <td>资源权限字符串</td>
-            <td>操作</td>
-        </tr>
-        </thead>
-        <tbody>
-        <span th:each="rid:${rids}">
-                        <input type="hidden" class="hasRes" name="hasRole" th:value="${rid}"/></span>
-        <tr th:each="res:${reses}">
-            <td th:text="${res.name }"
-            ></td>
-            <td th:text="${res.url}"></td>
-            <td th:text="${res.permission }">&nbsp;</td>
-            <td>
-                <input type="checkbox" name="setPermission" class="setPermission" th:value="${res.id }"/>
-                &nbsp;
-            </td>
-        </tr>
-        </tbody>
-    </table>
+<!--<div id="content">-->
+    <!--<div th:include="role/inc :: head"></div>-->
+    <!--<h4 th:text=" ${role.name }+'&#45;&#45;&#45;&#45;'+${role.sn}"></h4>-->
+    <!--<input type="hidden" id="roleId" th:value="${role.id }"/>-->
+    <!--<table width="800" cellspacing="0" cellPadding="0" id="listTable" border="1">-->
+        <!--<thead>-->
+        <!--<tr>-->
+            <!--<td>资源名称</td>-->
+            <!--<td>资源url</td>-->
+            <!--<td>资源权限字符串</td>-->
+            <!--<td>操作</td>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--<span th:each="rid:${rids}">-->
+                        <!--<input type="hidden" class="hasRes" name="hasRole" th:value="${rid}"/></span>-->
+        <!--<tr th:each="res:${reses}">-->
+            <!--<td th:text="${res.name }"-->
+            <!--&gt;</td>-->
+            <!--<td th:text="${res.url}"></td>-->
+            <!--<td th:text="${res.permission }">&nbsp;</td>-->
+            <!--<td>-->
+                <!--<input type="checkbox" name="setPermission" class="setPermission" th:value="${res.id }"/>-->
+                <!--&nbsp;-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--</tbody>-->
+    <!--</table>-->
+<!--</div>-->
+
+<div class="x-nav" style="margin-bottom: 30px">
+          <span class="layui-breadcrumb" style="visibility: visible">
+            <a th:href="@{|/admin/role/list|}">角色列表</a>
+            <span lay-separator>/</span>
+            <a>
+              <cite>查询管理资源</cite></a>
+          </span>
+</div>
+<div th:include="role/inc :: head"></div>
+<div class="layui-fluid">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12">
+            <div class="layui-card">
+                <div class="layui-card-body">
+                    <div class="layui-inline">
+                        <a href="/admin/role/add" class="admin_link layui-btn">添加</a>
+                    </div>
+                    <table class="layui-table layui-form">
+
+                        <thead>
+                        <tr>
+                            <td>资源名称</td>
+                            <td>资源url</td>
+                            <td>资源权限字符串</td>
+                            <td>操作</td>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <span th:each="rid:${rids}">
+                            <input type="hidden" class="hasRes" name="hasRole" th:value="${rid}"/></span>
+                        <tr th:each="res:${reses}">
+                            <td th:text="${res.name }"></td>
+                            <td th:text="${res.url}"></td>
+                            <td th:text="${res.permission }">&nbsp;</td>
+                            <td>
+                                <a class="layui-btn list_op" th:href="@{|/admin/res/update/${res.id }|}" >修改</a>
+                                &nbsp;
+                                <!--                           <a class="layui-btn list_op" th:href="@{|listRes/${role.id }|}">查询管理资源</a>-->
+                                <a class="layui-btn layui-btn-danger" th:href="@{|delete/${res.id }|}" >删除</a>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
