--- a/src/main/resources/templates/shiyan/lookTestAndReport.html
+++ b/src/main/resources/templates/shiyan/lookTestAndReport.html
@@ -11,11 +11,12 @@
         	<link rel="stylesheet" type="text/css" href="../../static/css/font.css"/>
         <!--<link rel="stylesheet" href="./css/xadmin.css">-->
         	<link rel="stylesheet" type="text/css" href="../../static/css/xadmin.css"/>
+        <script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
         <!--<script src="./lib/layui/layui.js" charset="utf-8"></script>-->
         <script src="../../static/js/layui.js" type="text/javascript" charset="utf-8"></script>
         <!--<script type="text/javascript" src="./js/xadmin.js"></script>-->
         <script src="../../static/js/xadmin.js" type="text/javascript" charset="utf-8"></script>
-        <script src="../../static/js/jquery-3.4.1.min.js" type="text/javascript" charset="utf-8"></script>
+
 
     </head>
     <style>
@@ -67,6 +68,22 @@
                                     <!--<a class="layui-btn"  lay-submit="" title="增加" onclick="xadmin.open('增加','班级新增.html')"><i class="layui-icon"></i>增加</a>-->
                                 <!--</div>&ndash;&gt;-->
                             <!--</form>-->
+                            <th colspan="3" style="padding: 0">
+                                <div class="layui-form-item">
+                                    <label class="layui-form-label" style="padding-top: 20px; ">课程筛选</label>
+                                    <div class="layui-input-block" style="width: 17%;">
+                                        <select name="interest" lay-filter="aihao" onchange="window.open(this.options[this.selectedIndex].value,target='_self')"
+                                                style="margin-top: 15px;height: 30px;width: 150px;border-color: lightgray;" >
+                                            <option>请选择</option>
+                                            <div th:each="course:${course}" class="">
+                                                <option th:value="|/expmodel/moduleList/${course.id}|"  th:text="${course.courseName}">java</option>
+                                                <!--<p th:text="${course.courseName}"></p>-->
+                                            </div>
+                                        </select>
+
+                                    </div>
+                                </div>
+                            </th>
                         </div>
                        
                         <div class="layui-card-body ">
