--- a/src/main/resources/templates/user/inc.html
+++ b/src/main/resources/templates/user/inc.html
@@ -2,13 +2,19 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Document</title>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
+    <link rel="stylesheet" th:href="@{/css/layui.css}" href="../../static/css/layui.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css" th:href="@{/css/xadmin.css}">
 </head>
 <body>
-<div th:fragment="head"><span>
-    <div th:include="common :: common"></div>
-<a href="/admin/user/add" class="admin_link">添加用户</a>
-<a href="/admin/user/list" class="admin_link">用户列表</a>
-</span></div>
+<!--<div th:fragment="head"><span>-->
+    <!--<div th:include="common :: common"></div>-->
+<!--<a href="/admin/user/add" class="admin_link">添加用户</a>-->
+<!--<a href="/admin/user/list" class="admin_link">用户列表</a>-->
+<!--</span></div>-->
 
 </body>
 </html>
