--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -4,65 +4,141 @@
 <head th:include="layout :: htmlhead" th:with="title='后台管理'">
     <meta charset="UTF-8"/>
     <title>Title</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport" content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi" />
+    <link rel="stylesheet" href="../../static/css/font.css">
+    <link rel="stylesheet" href="../../static/css/xadmin.css">
+    <link rel="stylesheet" href="../../static/css/layui.css" th:href="@{../../static/css/layui.css}">
+    <script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>
+    <script type="text/javascript" src="../../static/js/xadmin.js"></script>
 </head>
 <body>
 <div th:include="user/inc :: head"></div>
-<div id="content">
-    <table width="800" cellspacing="0" cellPadding="0" id="listTable" border="1">
-        <thead>
-        <tr>
-            <td>用户标识</td>
-            <td>用户名称</td>
-            <td>用户昵称</td>
-            <td>用户状态</td>
-            <td>用户操作</td>
-        </tr>
-        </thead>
-        <tbody>
-        <tr th:each="user,stat:${users}">
-            <td th:if="${stat.index eq 0}"><span th:text="${user.id}">1800998873</span></td>
-            <td th:if="${stat.index eq 0}"><span th:text="${user.username }"><a th:href="${user.id }" class="list_link">张三</a></span></td>
-            <td th:if="${stat.index eq 0}"><span th:text="${user.nickname }"></span></td>
-            <td th:if="${stat.index eq 0}"><span th:if="${user.status} eq true">
+<!--<div id="content">-->
+    <!--<table width="800" cellspacing="0" cellPadding="0" id="listTable" border="1">-->
+        <!--<thead>-->
+        <!--<tr>-->
+            <!--<td>用户标识</td>-->
+            <!--<td>用户名称</td>-->
+            <!--<td>用户昵称</td>-->
+            <!--<td>用户状态</td>-->
+            <!--<td>用户操作</td>-->
+        <!--</tr>-->
+        <!--</thead>-->
+        <!--<tbody>-->
+        <!--<tr th:each="user,stat:${users}">-->
+            <!--<td th:if="${stat.index eq 0}"><span th:text="${user.id}">1800998873</span></td>-->
+            <!--<td th:if="${stat.index eq 0}"><span th:text="${user.username }"><a th:href="${user.id }" class="list_link">张三</a></span></td>-->
+            <!--<td th:if="${stat.index eq 0}"><span th:text="${user.nickname }"></span></td>-->
+            <!--<td th:if="${stat.index eq 0}"><span th:if="${user.status} eq true">-->
+                <!--<span class="emp">停用</span>-->
+                <!--<a th:href="@{|updateStatus/${user.id }|}" class="list_op">启用</a>-->
+                <!--</span>-->
+            <!--</td>-->
+            <!--<td th:if="${stat.index eq 0}">-->
+                <!--<span th:if="${user.status eq false}">-->
+                    <!--<span>启用</span>-->
+                    <!--<a th:href="@{|updateStatus/${user.id }|}" class="list_op">停用</a>-->
+                    <!--</th:if>-->
+                <!--</span>-->
+            <!--</td>-->
+            <!--<td th:if="${stat.index eq 0}"><span>-->
+                <!--<a th:href="@{|update/${user.id }|}" class="list_op">更新</a>-->
+                <!--<a th:href="@{|listRes/${user.id }|}" class="list_op">查询管理资源</a>-->
+                <!--</span>-->
+            <!--</td>-->
+
+            <!--<td th:if="${stat.index > 0}"><span th:text="${user.id}">1800998873</span></td>-->
+            <!--<td th:if="${stat.index > 0}"><span th:text="${user.username }"><a th:href="${user.id }" class="list_link">张三</a></span></td>-->
+            <!--<td th:if="${stat.index > 0}"><span th:text="${user.nickname }"></span></td>-->
+            <!--<td th:if="${stat.index > 0}"><span th:if="${user.status} eq true">-->
+                <!--<span class="emp">停用</span>-->
+                    <!--<a th:href="@{|updateStatus/${user.id }|}" class="list_op">启用</a>-->
+                <!--</span>-->
+            <!--</td>-->
+            <!--<td th:if="${stat.index > 0}"><span th:if="${user.status eq false}">-->
+                <!--<span>启用</span>-->
+                <!--<a th:href="@{|updateStatus/${user.id }|}" class="list_op">停用</a>-->
+                <!--</th:if>-->
+                <!--</span>-->
+            <!--</td>-->
+            <!--<td th:if="${stat.index > 0}"><span>-->
+                    <!--<a th:href="@{|update/${user.id }|}" class="list_op">更新</a>-->
+                    <!--<a th:href="@{|listRes/${user.id }|}" class="list_op">查询管理资源</a>-->
+                <!--</span>-->
+            <!--</td>-->
+        <!--</tr>-->
+        <!--</tbody>-->
+    <!--</table>-->
+<!--</div>-->
+<div class="x-nav" style="margin-bottom: 30px">
+          <span class="layui-breadcrumb" style="visibility: visible">
+            <a th:href="@{|/admin/user/list|}">用户管理</a>
+            <span lay-separator>/</span>
+            <a>
+              <cite>用户列表</cite></a>
+          </span>
+</div>
+<div class="layui-fluid">
+    <div class="layui-row layui-col-space15">
+        <div class="layui-col-md12">
+            <div class="layui-card">
+                <a href="/admin/user/add" class="layui-btn layui-bg-green" style="margin: 1rem 1rem auto">添加用户</a>
+                <div class="layui-card-body layui-table-body layui-table-main">
+                    <table class="layui-table layui-form" id="demo" lay-filter="demo">
+                        <thead>
+                        <tr>
+
+                            <th width="3%">用户标识</th>
+                            <th width="14%">用户名称</th>
+                            <th width="14%">用户昵称</th>
+                            <th>用户状态</th>
+                            <th>用户操作</th>
+                            <th>操作</th>
+
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr th:each="user,stat:${users}">
+                            <td th:if="${stat.index eq 0}"><span th:text="${user.id}">1800998873</span></td>
+                            <td th:if="${stat.index eq 0}"><span th:text="${user.username }">
+                                <a th:href="${user.id }" class="list_link">张三</a></span></td>
+                            <td th:if="${stat.index eq 0}"><span th:text="${user.nickname }"></span></td>
+                            <td th:if="${stat.index eq 0}">
+                                <span th:if="${user.status} eq true">
                 <span class="emp">停用</span>
                 <a th:href="@{|updateStatus/${user.id }|}" class="list_op">启用</a>
                 </span>
-            </td>
-            <td th:if="${stat.index eq 0}">
-                <span th:if="${user.status eq false}">
-                    <span>启用</span>
-                    <a th:href="@{|updateStatus/${user.id }|}" class="list_op">停用</a>
-                    </th:if>
-                </span>
-            </td>
-            <td th:if="${stat.index eq 0}"><span>
-                <a th:href="@{|update/${user.id }|}" class="list_op">更新</a>
-                <a th:href="@{|listRes/${user.id }|}" class="list_op">查询管理资源</a>
-                </span>
-            </td>
 
-            <td th:if="${stat.index > 0}"><span th:text="${user.id}">1800998873</span></td>
-            <td th:if="${stat.index > 0}"><span th:text="${user.username }"><a th:href="${user.id }" class="list_link">张三</a></span></td>
-            <td th:if="${stat.index > 0}"><span th:text="${user.nickname }"></span></td>
-            <td th:if="${stat.index > 0}"><span th:if="${user.status} eq true">
-                <span class="emp">停用</span>
-                    <a th:href="@{|updateStatus/${user.id }|}" class="list_op">启用</a>
+                            </td>
+                            <td th:if="${stat.index eq 0}">
+                                                <span th:if="${user.status eq false}">
+                                                    <span>启用</span>
+                                                    <a th:href="@{|updateStatus/${user.id }|}" class="layui-btn layui-btn-danger">停用</a>
+                                                    </th:if>
+                                                </span>
+                            </td>
+                            <td th:if="${stat.index eq 0}"><span>
+                                <a th:href="@{|update/${user.id }|}" type="button" class="layui-btn">更新</a>
+                                <a th:href="@{|listRes/${user.id }|}" type="button" class="layui-btn layui-btn-normal">查询管理资源</a>
+
                 </span>
-            </td>
-            <td th:if="${stat.index > 0}"><span th:if="${user.status eq false}">
-                <span>启用</span>
-                <a th:href="@{|updateStatus/${user.id }|}" class="list_op">停用</a>
-                </th:if>
-                </span>
-            </td>
-            <td th:if="${stat.index > 0}"><span>
-                    <a th:href="@{|update/${user.id }|}" class="list_op">更新</a>
-                    <a th:href="@{|listRes/${user.id }|}" class="list_op">查询管理资源</a>
-                </span>
-            </td>
-        </tr>
-        </tbody>
-    </table>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="layui-card-body ">
+                    <div class="page">
+                        <!--<div>-->
+                            <!--<a class="prev" th:href="@{/studentManage/list(pageNum=${studentList.hasPrevious()}?${studentList.number}-1:0)}">&lt;&lt;</a>-->
+                            <!--<a class="next" th:href="@{/studentManage/list(pageNum=${studentList.hasNext()}?${studentList.number}+1:${studentList.number})}">&gt;&gt;</a>-->
+                        <!--</div>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
