--- a/src/main/resources/templates/role/update.html
+++ b/src/main/resources/templates/role/update.html
@@ -2,29 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
-    <!--<script type="text/javascript" src="../js/jquery-1.11.3.min.js"></script>-->
-    <!--<link rel="stylesheet" href="../../static/css/font.css">-->
-    <!--<link rel="stylesheet" href="../../static/css/xadmin.css">-->
-    <!--<link rel="stylesheet" href="../../static/css/layui.css">-->
-    <!--<script type="text/javascript" th:src="@{/js/jquery-2.1.1.min.js}"></script>-->
-    <!--<script type="text/javascript" src="../../static/js/layui.js" charset="utf-8"></script>-->
-    <!--<script type="text/javascript" src="../../static/js/xadmin.js"></script>-->
-    <!--<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>-->
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="viewport"
+          content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
 
-    <!--<script type="text/javascript">-->
-        <!--$(function () {-->
-            <!--var hasRoles = new Array();-->
-            <!--console.log(hasRoles);-->
-            <!--$(".hasRole").each(function () {-->
-                <!--hasRoles.push($(this).val());-->
-            <!--});-->
-            <!--$(".rids").each(function () {-->
-                <!--if ($.inArray($(this).val(), hasRoles) >= 0) {-->
-                    <!--$(this).attr("checked", "checked");-->
-                <!--}-->
-            <!--});-->
-        <!--});-->
-    <!--</script>-->
     <style>
         .layui-form-label{
             width: 100px;
@@ -33,33 +15,7 @@
     <title>Title</title>
 </head>
 <body>
-<!--<div id="content">-->
-    <!--<div th:include="role/inc :: head"></div>-->
-    <!--<form role="form" th:method="post" th:object="${role}" id="updateForm">-->
-        <!--<table width="800" cellspacing="0" cellPadding="0">-->
-            <!--<thead>-->
-            <!--<tr>-->
-                <!--<td colspan="2">更新角色功能</td>-->
-            <!--</tr>-->
-            <!--</thead>-->
-            <!--<tr>-->
-                <!--<td class="rightTd" width="200px">角色名称:</td>-->
-                <!--<td class="leftTd">-->
-                    <!--<input path="name" size="30" th:field="${role.name}"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td class="rightTd">角色SN:</td>-->
-                <!--<td class="leftTd">-->
-                    <!--<input path="sn" size="30" th:field="${role.sn}"/>-->
-                <!--</td>-->
-            <!--</tr>-->
-            <!--<tr>-->
-                <!--<td colspan="2" class="centerTd"><input type="submit" value="更新角色"/><input type="reset"/></td>-->
-            <!--</tr>-->
-        <!--</table>-->
-    <!--</form>-->
-<!--</div>-->
+
 <div class="x-nav" style="margin-bottom: 30px">
           <span class="layui-breadcrumb" style="visibility: visible">
             <a th:href="@{|/admin/role/list|}">角色列表</a>
@@ -69,7 +25,7 @@
           </span>
 </div>
 <div class="layui-fluid">
-    <!--<div th:include="role/inc :: head"></div>-->
+    <div th:include="role/inc :: head"></div>
 
     <div class="layui-row">
         <form class="layui-form" role="form" th:method="post" th:object="${role}">
@@ -103,6 +59,6 @@
         </form>
     </div>
 </div>
-
+<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>
 </body>
 </html>
