考核模块移入移出修改

--- a/src/main/resources/templates/kaohe/moveIn.html
+++ b/src/main/resources/templates/kaohe/moveIn.html
@@ -184,7 +184,7 @@
 				<div class="layui-form-item ">
 					<div class="layui-input-block ">
 						<button type="submit" class="layui-btn bo" lay-submit="" lay-filter="demo1" >添加</button>
-						<a th:href="@{/kaohemodel/allModule/${moveIn.getArrange_id()}}" class="layui-btn layui-btn-primary bo">取消</a>
+						<a th:href="@{|/kaohemodel/Module/${moveIn.getArrange_id()}|}" class="layui-btn layui-btn-primary bo">取消</a>
 					</div>
 				</div>
 			</form>
