--- a/src/main/resources/templates/kuangjia/frame.html
+++ b/src/main/resources/templates/kuangjia/frame.html
@@ -79,7 +79,8 @@
                                 <el-menu-item index="/newsinfo/list">平台公告</el-menu-item>
                                 <el-menu-item index="/setinfo/addus">关于我们</el-menu-item>
                             </el-submenu>
-                            <el-menu-item index="/admin/list">
+                            <!--<el-menu-item index="/admin/list">-->
+                            <el-menu-item index="/admin/user/list">
                                 <i class="el-icon-s-custom"></i>
                                 <span slot="title">教师账号管理</span>
                             </el-menu-item>
@@ -88,7 +89,7 @@
                                     <i class="el-icon-aim"></i>
                                     <span slot="title">权限管理</span>
                                 </template>
-                                <el-menu-item index="/admin/user/list">用户列表</el-menu-item>
+                                <!--<el-menu-item index="/admin/user/list">用户列表</el-menu-item>-->
                                 <el-menu-item index="/admin/role/list">角色列表</el-menu-item>
                                 <el-menu-item index="/admin/res/list">资源列表</el-menu-item>
 
