--- a/src/main/resources/templates/user/inc.html
+++ b/src/main/resources/templates/user/inc.html
@@ -8,6 +8,11 @@
           content="width=device-width,user-scalable=yes, minimum-scale=0.4, initial-scale=0.8,target-densitydpi=low-dpi"/>
     <link rel="stylesheet" th:href="@{/css/layui.css}" href="../../static/css/layui.css">
     <link rel="stylesheet" href="../../static/css/xadmin.css" th:href="@{/css/xadmin.css}">
+    <!--<style>-->
+        <!--.layui-form input[type=checkbox], .layui-form input[type=radio], .layui-form select{-->
+            <!--display: inherit;-->
+        <!--}-->
+    <!--</style>-->
 </head>
 <body>
 <!--<div th:fragment="head"><span>-->
