--- a/src/main/resources/templates/shiyan/addLastAnswer.html
+++ b/src/main/resources/templates/shiyan/addLastAnswer.html
@@ -54,7 +54,7 @@
 <div class="layui-row layui-col-space10">
     <div class="layui-col-md6">
         <!--<form class="layui-form" action="">	-->
-        <form class="layui-form" th:action="@{/shiyan/addLastAnswer}" method="post">
+        <form class="layui-form" th:action="@{|/shiyan/addLastAnswer/${arrangeId}|}" method="post">
             <!--<div class="layui-form-item">-->
             <!--<label class="layui-form-label">题目</label>-->
             <!--<div class="layui-input-block">-->
